[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["short-run-time"]
short-run-time = []
long-run-time = []
all = ["short-run-time", "long-run-time"]

[dependencies]
anyhow = "1.0.79"
my_lib = { path = "../mylib" }
petgraph = "0.6.5"
regex = "1.11.1"
